...
                        <subviews>
                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="S2v-dB-mar" customClass="SingleLocationMapView" customModule="Stamp" customModuleProvider="target">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                            </mapView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FNe-Vt-Qai" customClass="RecordButton" customModule="Stamp" customModuleProvider="target">
                                <rect key="frame" x="155" y="524" width="64" height="64"/>
                                <accessibility key="accessibilityConfiguration" identifier="recordButton"/>
                                <state key="normal" image="stamp"/>
                                <connections>
                                    <action selector="onTapRecordButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HNN-Iz-zZe"/>
                                </connections>
                            </button>
                        </subviews>
...
                            <constraint firstItem="S2v-dB-mar" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="PTM-X0-kvn"/>
                            <constraint firstItem="S2v-dB-mar" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="WR2-4N-62S"/>
                            <constraint firstItem="S2v-dB-mar" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="jDj-ag-MSJ"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="現在地の記録" id="aNs-Vt-kPz"/>
                    <connections>
                        <outlet property="mapView" destination="S2v-dB-mar" id="BVy-Qa-8av"/>
                        <outlet property="recordButton" destination="FNe-Vt-Qai" id="L9q-4j-TKj"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
...
                            <constraint firstItem="AqS-cU-DHp" firstAttribute="bottom" secondItem="68t-g3-ZVM" secondAttribute="bottom" id="R8p-yz-wKp"/>
                            <constraint firstItem="xEw-1p-PpT" firstAttribute="top" secondItem="68t-g3-ZVM" secondAttribute="top" id="qxh-3a-bMJ"/>
                            <constraint firstItem="AqS-cU-DHp" firstAttribute="top" secondItem="xEw-1p-PpT" secondAttribute="bottom" id="s7e-Xz-OQW"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="68t-g3-ZVM"/>
                    </view>
                    <navigationItem key="navigationItem" title="足跡リスト" id="la1-cB-D3d">
                        <barButtonItem key="rightBarButtonItem" image="trashbox" id="TqM-xB-f86">
                            <connections>
                                <action selector="onTapDeleteButtonItem:" destination="ne8-V7-Yfp" id="WC2-fK-irg"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                            <constraint firstItem="gKd-Ln-acb" firstAttribute="top" secondItem="cRA-FI-hn1" secondAttribute="bottom" id="f9n-rC-a9g"/>
                            <constraint firstItem="cRA-FI-hn1" firstAttribute="top" secondItem="vPT-3n-7JI" secondAttribute="top" id="n1Q-7y-Chs"/>
                            <constraint firstItem="cRA-FI-hn1" firstAttribute="trailing" secondItem="vPT-3n-7JI" secondAttribute="trailing" id="qzl-yz-YKd"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="vPT-3n-7JI"/>
                    </view>
                    <navigationItem key="navigationItem" title="足跡マップ" id="MBW-fV-ft4"/>
                    <connections>
                        <outlet property="dateRangeLabelView" destination="cRA-FI-hn1" id="QaB-CN-AZH"/>
                        <outlet property="historyMapView" destination="gKd-Ln-acb" id="nRd-GL-B3h"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="chG-qU-GSw" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
