...
                        <constraint firstAttribute="height" constant="1" id="9Nq-Ea-5zG"/>
                    </constraints>
                </view>
                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="PRM-ja-fHd">
                    <rect key="frame" x="16" y="290.5" width="343" height="87"/>
                    <subviews>
                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="タイトルを入力..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Z07-dW-vaH">
                            <rect key="frame" x="0.0" y="0.0" width="343" height="27"/>
                            <nil key="textColor"/>
                            <fontDescription key="fontDescription" type="system" pointSize="22"/>
                            <textInputTraits key="textInputTraits"/>
                        </textField>
                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2018年12月31日12時34分56秒" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T96-za-opJ">
...
