...
    }

    enum Range: String {
        case today = "今日"
        case recentWeek = "最近1週間"
        case recentMonth = "最近30日"
        case recentYear = "最近1年間"
        case others = "期間を指定"
    }
}

