...

    weak var delegate: DateRangeLabelViewDelegate?

    private var rangeName: String?

    @IBOutlet private weak var contentView: UIView!
    @IBOutlet private weak var dateRangeButton: UIButton!
    @IBOutlet private weak var dateRangeStackView: UIStackView!
    @IBOutlet private weak var fromDateTextField: UITextField!
    @IBOutlet private weak var toDateTextField: UITextField!
    
    override init(frame: CGRect) {
        super.init(frame: frame)
...
