...
                            <constraint firstItem="QRR-Qa-7S2" firstAttribute="top" secondItem="Ark-1X-cgN" secondAttribute="top" id="HIT-Xd-vNL"/>
                            <constraint firstItem="QRR-Qa-7S2" firstAttribute="bottom" secondItem="Ark-1X-cgN" secondAttribute="bottom" id="g2M-JU-dsi"/>
                            <constraint firstItem="QRR-Qa-7S2" firstAttribute="leading" secondItem="Ark-1X-cgN" secondAttribute="leading" id="nG8-Ym-3nE"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Ark-1X-cgN"/>
                    </view>
                    <navigationItem key="navigationItem" title="表示する期間" id="zI3-fF-PFW">
                        <barButtonItem key="leftBarButtonItem" title="キャンセル" id="GHz-9k-Lk1">
                            <connections>
                                <action selector="onTapCancelButton:" destination="601-yL-EQl" id="YGL-Xj-ybp"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
